--- a/portfolio.css
+++ b/portfolio.css
@@ -50,6 +50,17 @@ nav .menu {
   border-radius: 5px;
   cursor: pointer;
 }
+.section-heading h1 {
+  font-size: 35px;
+  font-weight: bold;
+  padding-bottom: 30px;
+}
+.section-heading p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  line-height: 30px;
+  color: #757575;
+}
 
 #banner {
   margin: 47px 38px 0px 230px;
@@ -95,5 +106,20 @@ nav .menu {
   margin: 0 auto;
   text-align: center;
   background-color: #fff8f3;
-  padding: 131px 157px 131px 156px;
+  padding: 131px 156px;
+}
+
+#about .about-container .about-info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about-info .info-card p {
+  font-size: 18px;
+  line-height: 30px;
+  color: #757575;
+}
+
+.about-info .info-card h4 {
+  font-size: 20px;
 }
