--- a/portfolio.css
+++ b/portfolio.css
@@ -50,6 +50,12 @@ nav .menu {
   border-radius: 5px;
   cursor: pointer;
 }
+.section-heading {
+  margin: 0 auto;
+  text-align: center;
+  max-width: 827px;
+  font-size: 35px;
+}
 .section-heading h1 {
   font-size: 35px;
   font-weight: bold;
@@ -122,4 +128,38 @@ nav .menu {
 
 .about-info .info-card h4 {
   font-size: 20px;
+}
+
+#skills {
+  padding-top: 130px;
+}
+#skills .skills-container {
+  width: 90%;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+#skills .skills-container .skills-box {
+  display: flex;
+  gap: 24px;
+}
+
+.skills-box .skills-card {
+  padding: 30px;
+  max-width: 276px;
+  box-shadow: 0px 6px 50px 0px #00000027;
+}
+.skills-card img {
+  max-width: 44px;
+  margin-bottom: 30px;
+}
+.skills-card h3 {
+  font-size: 20px;
+  color: #181818;
+  margin-bottom: 20px;
+}
+.skills-card p {
+  font-size: 16px;
+  color: #757575;
+  line-height: 28px;
 }
