--- a/portfolio.css
+++ b/portfolio.css
@@ -103,7 +103,9 @@ nav .menu {
   vertical-align: middle;
 }
 
-#about {
+#about,
+#skills,
+#resume {
   padding-top: 130px;
 }
 #about .about-container {
@@ -162,4 +164,10 @@ nav .menu {
   font-size: 16px;
   color: #757575;
   line-height: 28px;
+}
+
+#resume .resume-container {
+  width: 90%;
+  max-width: 1140px;
+  margin: 0 auto;
 }
