--- a/portfolio.css
+++ b/portfolio.css
@@ -166,8 +166,46 @@ nav .menu {
   line-height: 28px;
 }
 
+.resume-container hr {
+  margin: 30px 0;
+}
+
 #resume .resume-container {
   width: 90%;
   max-width: 1140px;
-  margin: 0 auto;
+  margin: 113px auto 0;
+  display: flex;
+  gap: 24px;
+}
+
+.resume-container .section-title {
+  font-size: 30px;
+  font-weight: bold;
+  color: #474747;
+  margin-bottom: 30px;
+}
+
+.resume-card {
+  margin-right: 47px;
+  max-width: 511px;
+}
+.resume-card .card-title {
+  font-size: 25px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #474747;
+}
+
+.resume-card .card-info {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #757575;
+}
+
+.resume-card .card-text {
+  font-size: 16px;
+  line-height: 28px;
+
+  color: #474747;
 }
